[gd_scene load_steps=4 format=3 uid="uid://connwtt88g63l"]

[ext_resource type="Script" path="res://src/toolbox.gd" id="1_eveqi"]
[ext_resource type="PackedScene" uid="uid://ccjn8jfm5dc4" path="res://src/tool.tscn" id="2_hm014"]

[sub_resource type="Theme" id="Theme_ex222"]
default_font_size = 24

[node name="Toolbox" type="PanelContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 134.0
grow_vertical = 2
script = ExtResource("1_eveqi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme = SubResource("Theme_ex222")

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Tools"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Rng" parent="VBoxContainer" instance=ExtResource("2_hm014")]
unique_name_in_owner = true
layout_mode = 2
text = "RNG"

[node name="Base64" parent="VBoxContainer" instance=ExtResource("2_hm014")]
unique_name_in_owner = true
layout_mode = 2
text = "Base64"

[node name="Hex" parent="VBoxContainer" instance=ExtResource("2_hm014")]
unique_name_in_owner = true
layout_mode = 2
text = "Hex"

[node name="Hasher" parent="VBoxContainer" instance=ExtResource("2_hm014")]
unique_name_in_owner = true
layout_mode = 2
text = "Hasher"

[node name="MD5" parent="VBoxContainer" instance=ExtResource("2_hm014")]
unique_name_in_owner = true
layout_mode = 2
text = "MD5"

[node name="SHA1" parent="VBoxContainer" instance=ExtResource("2_hm014")]
unique_name_in_owner = true
layout_mode = 2
text = "SHA1"

[node name="SHA256" parent="VBoxContainer" instance=ExtResource("2_hm014")]
unique_name_in_owner = true
layout_mode = 2
text = "SHA256"
